5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1585_1017.log
== TEST (2019-03-24 22:19:45) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
print(round(d,n));

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
AttributeError: 'float' object has no attribute 'cos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:20:40) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
print(round(d,2));

-- EXECUTION TIME:
0.293354
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1017/main.py", line 7, in <module>
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
AttributeError: 'float' object has no attribute 'cos'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:20:57) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
print(round(d,2));

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+cos(latitude1)*cos(latitude2).cos(longitude1-longitude2));
AttributeError: 'float' object has no attribute 'cos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:26:07) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(radians((latitude1))* cos(latitude2).cos(longitude1-longitude2));
print(round(d,2));
-3.130601
-- ERROR:
File "XXXX", line 7
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(radians((latitude1))* cos(latitude2).cos(longitude1-longitude2));
                                                                                                                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:26:37) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(latitude1)* cos(latitude2).cos(longitude1-longitude2));
print(round(d,2));
-3.130601
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(latitude1)* cos(latitude2).cos(longitude1-longitude2));
AttributeError: 'float' object has no attribute 'cos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:27:07) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(latitude1)* cos(latitude2).cos(longitude1-longitude2));
print(round(d,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(latitude1)* cos(latitude2).cos(longitude1-longitude2));
AttributeError: 'float' object has no attribute 'cos'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:27:53) 
-- CODE:
from math import *
latitude1=radians(float(input()));
longitude1=radians(float(input()));
latitude2=radians(float(input()));
longitude2=radians(float(input()));

d= 6371.01*acos(sin(latitude1)*sin(latitude2)+ cos(latitude1)* cos(latitude2)*cos(longitude1-longitude2));
print(round(d,2))
-- EXECUTION TIME:
0.130883
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
